added paragraph info

--- a/index.html
+++ b/index.html
@@ -18,14 +18,16 @@
             <div class="jumbotron jumbotron-fluid">
                 <div class="container">
                   <h1 class="display-4">Buckhead Church Maps</h1>
-                  <p class="lead">Open PDF Maps of Buckhead Church by floor.</p>
+                  <p class="lead">Welcome Maverick City Writing Camp! Open PDF Maps of Buckhead Church by floor below.</p>
                 </div>
               </div>
 
             <h3><a href="./BC 1st floor rooms.pdf">Buckhead Church 1st Floor Map</a></h3>
+            <p>This is the ground floor and contains The Gallery, where food will be served, along with dining spaces, as well as the majority of the writing rooms.</p>
             <br> <br>
 
             <h3><a href="./US 2nd Floor Hall.pdf">Buckhead Church 2nd Floor Map</a></h3>
+            <p>This floor contains writing rooms 3-7 and the Theater, where group worship sessions will be held. </p>
 
 
             
