--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </head>
     <body>
         <body>
-            <div class="jumbotron jumbotron-fluid" style="background-image: url(https://scontent.fatl1-1.fna.fbcdn.net/v/t1.6435-9/159969783_1157156958047884_7879292077010698172_n.jpg?_nc_cat=110&ccb=1-4&_nc_sid=730e14&_nc_ohc=HqKrhkYi21IAX_S3d1H&tn=yL8-PEDNywJgBy4q&_nc_ht=scontent.fatl1-1.fna&oh=40b0f0e7c1d4458f330185f68b757bc4&oe=6138AA25); background-size: cover; color: whitesmoke;" >
+            <div class="jumbotron jumbotron-fluid" style="background-image: url(https://scontent.fatl1-1.fna.fbcdn.net/v/t1.6435-9/159969783_1157156958047884_7879292077010698172_n.jpg?_nc_cat=110&ccb=1-4&_nc_sid=730e14&_nc_ohc=HqKrhkYi21IAX_S3d1H&tn=yL8-PEDNywJgBy4q&_nc_ht=scontent.fatl1-1.fna&oh=40b0f0e7c1d4458f330185f68b757bc4&oe=6138AA25); background-size: cover; color: whitesmoke; opacity: 80%;" >
                 <div class="container">
                     
                   <h1 class="display-4">Buckhead Church Maps & Parking Information</h1>
