added address and font size changes

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class="container">
                     
                   <h1 class="display-4">Buckhead Church Maps & Parking Information</h1>
-                  <h3 class="lead">Welcome Maverick City Writing Camp! <br>Open PDF Maps of Buckhead Church <br>& find parking info below.</h3>
+                  <h3 class="lead">Welcome Maverick City <br>Writing Camp! <br>Open PDF Maps of Buckhead Church <br>& find parking info below.</h3>
                   <img class="mavLogo" src="http://static1.squarespace.com/static/5e87caa93cc65b31c7a47cd2/t/605e6de5893521348a41a4a1/1616801253917/logo.jpg?format=1500w" height="150">
                 </div>
               </div>
@@ -51,7 +51,8 @@
             <h2><a href="./US 2nd Floor Hall.pdf">Buckhead Church 2nd Floor Map</a></h2>
             <p>This floor contains writing rooms 3-7 and the Theater, where group worship sessions will be held. </p>
 
-
+                <h2>Buckhead Church Address:</h2>
+                <p>3336 Peachtree Rd NE, Atlanta, GA 30326</p>
             
         </div>
 
