changed one piece of info

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <br> <br>
 
             <h2><a href="./US 2nd Floor Hall.pdf">Buckhead Church 2nd Floor Map</a></h2>
-            <p>This floor contains writing rooms 3-7 and the Theater, where group worship sessions will be held. </p>
+            <p>This floor contains the Theater, where group worship sessions will be held. </p>
 
             <br> <br>
 
