added parking map

--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
             <br> <br>
 
                 <h2>Buckhead Church Location:</h2>
+
+                <img src="./Screen Shot 2021-08-15 at 2.57.22 PM.png" width="400" alt=>
+
+                <br> <br>
                 
 
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3313.5764395470883!2d-84.3740954851534!3d33.8490322358597!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88f50f5f1b0cd38f%3A0xe2619a3ba0ee9b0f!2sBuckhead%20Church!5e0!3m2!1sen!2sus!4v1628884436417!5m2!1sen!2sus" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
