--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="jumbotron jumbotron-fluid" style="background-image: url(https://scontent.fatl1-1.fna.fbcdn.net/v/t1.6435-9/159969783_1157156958047884_7879292077010698172_n.jpg?_nc_cat=110&ccb=1-4&_nc_sid=730e14&_nc_ohc=HqKrhkYi21IAX_S3d1H&tn=yL8-PEDNywJgBy4q&_nc_ht=scontent.fatl1-1.fna&oh=40b0f0e7c1d4458f330185f68b757bc4&oe=6138AA25); background-size: cover; color: whitesmoke;" >
                 <div class="container">
                     
-                  <h1 class="display-4">Buckhead Church Maps & Parking Information</h1>
+                  <h1 class="display-4">Buckhead Maps & Parking Information</h1>
                   <h3 class="lead">Welcome Maverick City <br>Writing Camp! <br>Open PDF Maps of Buckhead Church <br>& find parking info below.</h3>
                   <img class="mavLogo" src="http://static1.squarespace.com/static/5e87caa93cc65b31c7a47cd2/t/605e6de5893521348a41a4a1/1616801253917/logo.jpg?format=1500w" height="150">
                 </div>
