--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               </div>
             <div class="hero-image">
               <div class="parking">
-              <h1>Buckhead Church Parking Info</h1>
+              <h1>Buckhead Parking Info</h1>
 
             <h3>Gate Code: 31265#</h3>
             <h3>Parking Directions:</h3>
@@ -44,11 +44,11 @@
 
             <div class="maps">
 
-            <h2><a href="./BC 1st floor rooms.pdf">Buckhead Church 1st Floor Map</a></h2>
+            <h2><a href="./BC 1st floor rooms.pdf">Buckhead 1st Floor Map</a></h2>
             <p>This is the ground floor and contains The Gallery, where food will be served, along with dining spaces, as well as the majority of the writing rooms.</p>
             <br> <br>
 
-            <h2><a href="./US 2nd Floor Hall.pdf">Buckhead Church 2nd Floor Map</a></h2>
+            <h2><a href="./US 2nd Floor Hall.pdf">Buckhead 2nd Floor Map</a></h2>
             <p>This floor contains the Theater, where group worship sessions will be held. </p>
 
             <br> <br>
